--- a/components/style.css
+++ b/components/style.css
@@ -1,22 +1,11 @@
-/* .slick-prev {
-    left: -20px !important;
-  }
-  .slick-next:before,
-  .slick-prev:before {
-    content: "" !important;
-  }
-  .next-slick-arrow,
-  .prev-slick-arrow {
-    color: #000000;
-    font-size: 25px;
-  } */
-
-
 .border-dashed-customized{
   width: 80%;
-  height: 100%;
   padding: 25px;
   /* dashed border */
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='38' ry='38' stroke='%23483EB5FF' stroke-width='10' stroke-dasharray='14%2c 34%2c 25%2c 36' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
   border-radius: 38px;
+}
+
+.icon{
+  fill : #483EB5FF;
 }
